This patch set adds more missing shell link definitions.
Because of the COORD structure, which is needed by NT_CONSOLE_PROPS, a new dependency arises (wincon.h is now needed by shlobj.h).
v1_1of3_add_wincon_h.patch
Adds all the "#include <wincon.h>"
v1_2of3_shlobj_h.patch
Adds NT_CONSOLE_PROPS and NT_FE_CONSOLE_PROPS and fixes EXP_SZ_LINK
v1_3of3_shlobj_undoc_h.patch
Adds SHELL_LINK_INFO_* and some Shell Link Extra Data structures (for IShellLinkDataList)
Sources:
http://msdn.microsoft.com/de-de/library/windows/desktop/bb773359%28v=vs.85%29.aspx
http://msdn.microsoft.com/de-de/library/windows/desktop/bb773362%28v=vs.85%29.aspx
http://msdn.microsoft.com/en-us/library/dd871305.aspx
https://code.google.com/p/lnk-parser/
PS: My long-term plan is to implement the missing shell link functionality.