[PSDK] * Add NT_CONSOLE_PROPS and NT_FE_CONSOLE_PROPS and fix EXP_SZ_LINK. * Add SHELL_LINK_INFO_* and some Shell Link Extra Data structures (for IShellLinkDataList). [USERINIT][CPLS][DLLS] * Add the now necessary wincon.h inclusion. * Brought to you by Dominik Hornung. CORE-7162 #resolve #comment Committed in r58930. Danke !

svn path=/trunk/; revision=58930