reactos/dll/win32/ieframe/ieframe.h
@@ -31,6 +31,7 @@
 #include <winbase.h>
 #include <wingdi.h>
 //#include "winuser.h"
+#include <wincon.h>
 
 //#include "ole2.h"
 //#include "olectl.h"
